--- a/.github/workflows/rishik.yml
+++ b/.github/workflows/rishik.yml
@@ -16,6 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: maven
+    - na m : Build with Maven
+      run: mvn -B package --file pom.xml
+
           ######## Sonar Cloud Scan ########
   Code-Quality-Check:
     needs: Build
@@ -28,12 +37,3 @@ jobs:
         #run: mvn -B sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=pintu-gupta-github -Dsonar.projectKey=pintu-gupta-github
         run: mvn -B sonar:sonar -Dsonar.projectKey=Java-Maven-Jacoco-Sonar -Dsonar.projectName=Java-Maven-Jacoco-Sonar -Dsonar.host.url=http://34.125.147.33:9000 -Dsonar.login=103e87043953a8c9564be3a5fbed3a26a6d084c2
         #uses: sonarsource/sonarcloud-github-action@master
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
