--- a/.github/workflows/rishik.yml
+++ b/.github/workflows/rishik.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
-    - na m : Build with Maven
+    - name : Build with Maven
       run: mvn -B package --file pom.xml
 
           ######## Sonar Cloud Scan ########
