--- a/.github/workflows/rishik.yml
+++ b/.github/workflows/rishik.yml
@@ -35,3 +35,7 @@ jobs:
       timeout-minutes: 5
       env:
        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: Publish package
+      run: mvn --batch-mode deploy
+      env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GIT }}
