--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,11 @@
   <build>
     <finalName>flipkart</finalName>
   </build>
+   <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/rooparishik/mvn-b6</url>
+    </repository>
+  </distributionManagement>
 </project>
